[package]
name = "hornet-examples"
version = "0.1.0"
authors = ["Saurav Sachidanand <sauravsachidanand@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "Examples of hornet, a Rust PCP instrumentation API"
repository = "https://github.com/performancecopilot/hornet"

[dependencies]
hornet = { path = "../" }
rand = "0.3.15"
